--- a/pages/60158480B.html
+++ b/pages/60158480B.html
@@ -38,7 +38,7 @@ window.lpTag=window.lpTag||{},"undefined"==typeof window.lpTag._tagCount?(window
 <script>
         lpTag.events.bind('LPTAG', 'ON_READY', function(){
             lpTag.site = '60158480';
-            lpTag.protocol = 'http:';
+            lpTag.protocol = 'https:';
 			lpTag.csds.setDomains([
                 {
                     "service" : "ACCDN",
