--- a/maven/catalog.html
+++ b/maven/catalog.html
@@ -18,7 +18,7 @@
 
     
     
-    function submitGetProductStg () {
+    function submitGetProductDev () {
             const headers = {
                 "Content-Type":"application/json",
                 "maven-uid":"8c8fbb13-86a6-4404-8191-2af098901e90",
