--- a/maven/catalog.html
+++ b/maven/catalog.html
@@ -22,7 +22,7 @@
             const headers = {
                 "Content-Type":"application/json",
                 "maven-uid":"8c8fbb13-86a6-4404-8191-2af098901e90",
-                "Authorization":"Bearer syt_bWF2ZW5fY29uc3VtZXJfMzg2MzM4NjY2MjYyMzEzMzJkMzgzNjYxMzYyZDM0MzQzMDM0MmQzODMxMzkzMTJkMzI2MTY2MzAzOTM4MzkzMDMxNjUzOTMw_gGRESmafhRAeUuNEQHHU_29r6xG"
+                "Authorization":"Bearer "
             };
             submit("https://dev-api.mavenapp.com/catalog/api/v2/brands/8c8fbb13-86a6-4404-8191-2af098901e90/products?size=20&page=0&aggregate=onSale,bestSeller", headers)
         }    
@@ -30,7 +30,7 @@
             const headers = {
                 "Content-Type":"application/json",
                 "maven-uid":"1c33f76a-79c6-428e-a129-1a5772d241ce",
-                "Authorization":"Bearer syt_bWF2ZW5fYnJhbmRfMzE2MzMzMzM2NjM3MzY2MTJkMzczOTYzMzYyZDM0MzIzODY1MmQ2MTMxMzIzOTJkMzE2MTM1MzczNzMyNjQzMjM0MzE2MzY1_mCGwkaRLtWdMTvcZqwJf_15Scly"
+                "Authorization":"Bearer "
             };
             submit("https://stg-api.mavenapp.com/catalog/api/v2/brands/1c33f76a-79c6-428e-a129-1a5772d241ce/products?size=20&page=0&aggregate=onSale,bestSeller", headers)
         }
