--- a/maven/maven-connect-cors-test.html
+++ b/maven/maven-connect-cors-test.html
@@ -23,7 +23,7 @@
 <script>
 
     function submitAuthenticate (env) {
-        const url = env === "stg" ? "https://va-a.mavenconnect.liveperson.net/api/v2/brands/817dcaad-dddf-46b2-b03b-139c7aad2068/access": "https://va-mavenconnect.liveperson.net/api/v2/brands/b5eb8fe1-344e-459c-8a1b-adfb0567a16e/access";
+        const url = env === "stg" ? "https://va-a.mavenconnect.liveperson.net/api/v2/brands/817dcaad-dddf-46b2-b03b-139c7aad2068/access": "https://va.mavenconnect.liveperson.net/api/v2/brands/b5eb8fe1-344e-459c-8a1b-adfb0567a16e/access";
         const jwt = env === "stg" ? $( "#tokenStg" ).val(): $( "#tokenPrd" ).val();
         const headers = {
             "Content-Type":"application/json",
