--- a/maven/maven-connect-cors-test.html
+++ b/maven/maven-connect-cors-test.html
@@ -28,10 +28,7 @@
 <script>
 
     function submitAuthenticate (env) {
-    const url;
-        if(env === "stg"){
-          url = "https://va-a.mavenconnect.liveperson.net/api/v2/brands/817dcaad-dddf-46b2-b03b-139c7aad2068/access";
-        }
+        let url = "https://va-a.mavenconnect.liveperson.net/api/v2/brands/817dcaad-dddf-46b2-b03b-139c7aad2068/access";;
         if(env === "prd"){
           url = "https://va.mavenconnect.liveperson.net/api/v2/brands/b5eb8fe1-344e-459c-8a1b-adfb0567a16e/access";
         }
