--- a/test/facebook.html
+++ b/test/facebook.html
@@ -55,7 +55,7 @@
 
 <!-- The JS SDK Login Button -->
 
-<fb:login-button scope="public_profile,email,pages_messaging,pages_manage_engagement,pages_manage_metadata,pages_manage_posts,pages_read" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email,pages_messaging,pages_manage_engagement,pages_manage_metadata,pages_manage_posts,pages_read_engagement,pages_read_user_content,pages_show_list"" onlogin="checkLoginState();">
 </fb:login-button>
 <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button> -->
